<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="4dp"
    android:paddingLeft="4dp"
    android:paddingEnd="4dp"
    android:paddingRight="4dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recenzieRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/numeUtilizatorEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/reviewEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/recenzieEditTextr"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendReviewButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sendReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trimiteReviewButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/numeUtilizatorEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numeUtilizatorEditText"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/reviewEditText"
        app:layout_constraintEnd_toEndOf="@+id/reviewEditText"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>